@@ -1,28 +1,41 @@
-<project xmlns:ivy="antlib:org.apache.ivy.ant" name="Cuke4Duke Simple Demo" default="cucumber" basedir=".">
+<project xmlns:ivy="antlib:org.apache.ivy.ant" name="Cuke4Duke Groovy Demo" default="cucumber" basedir=".">
   <property name="dotgem.parent" value="${basedir}/lib"/>
   <property name="gem.home" value="${dotgem.parent}/.gem"/>
   <property name="cucumber.bin" value="${gem.home}/bin/cucumber"/>
 
-  <target name="compile-steps" description="Compile test classes">
-    <mkdir dir="target/test-classes"/>
-    <javac srcdir="src/test/java" destdir="target/test-classes">
-      <classpath>
-        <fileset dir="lib">
-          <include name="**/*.jar"/>
-        </fileset>
-      </classpath>
+  <path id="lib">
+    <fileset dir="lib">
+      <include name="**/*.jar"/>
+    </fileset>
+  </path>
+
+  <taskdef name="groovyc" classname="org.codehaus.groovy.ant.Groovyc" classpathref="lib"/>
+
+  <target name="compile-main" description="Compile main classes">
+    <mkdir dir="target/classes"/>
+    <javac srcdir="src/main/java" destdir="target/classes">
+      <classpath refid="lib" />
     </javac>
+  </target>
+
+  <target name="compile-steps" depends="compile-main" description="Compile test classes">
+    <mkdir dir="target/test-classes"/>
+    <groovyc srcdir="src/test/groovy" destdir="target/test-classes">
+      <classpath refid="lib" />
+      <classpath>
+        <pathelement location="target/classes"/>
+      </classpath>
+    </groovyc>
   </target>
 
   <target name="cucumber" depends="compile-steps" description="Run Cucumber">
     <mkdir dir="target/junit-report"/>
 
     <java classname="org.jruby.Main" fork="true" failonerror="true">
+      <classpath refid="lib" />
       <classpath>
-        <fileset dir="lib">
-          <include name="**/*.jar"/>
-        </fileset>
         <pathelement location="target/test-classes"/>
+        <pathelement location="target/classes"/>
       </classpath>
       <env key="GEM_PATH" value="${gem.home}"/>
       <arg value="-r"/>
