@@ -1,4 +1,3 @@
 require 'cuke4duke/pico_container'
 
-register_class(Java::simple.StuffSteps)
-register_class(Java::simple.HookSteps)
+register_class(Java::CalculatorSteps)
